# parallel-NN-library

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Eigen3/include/eigen3/Eigen/src/Core/arch/NEON/: PacketMath.h
Eigen3/include/eigen3/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
Eigen3/include/eigen3/Eigen/src/Core/util/: ConfigureVectorization.h
Eigen3/include/eigen3/Eigen/src/Geometry/: Hyperplane.h
Eigen3/include/eigen3/unsupported/Eigen/: NonLinearOptimization
Eigen3/include/eigen3/unsupported/Eigen/CXX11/src/Tensor/: TensorBase.h
Eigen3/include/eigen3/unsupported/Eigen/CXX11/src/ThreadPool/: RunQueue.h
Eigen3/include/eigen3/unsupported/Eigen/src/LevenbergMarquardt/: LMonestep.h
Eigen3/include/eigen3/unsupported/Eigen/src/NonLinearOptimization/: HybridNonLinearSolver.h  LevenbergMarquardt.h  dogleg.h
Eigen3/share/pkgconfig/: eigen3.pc
NNlib/include/: Layer.h  LossFunction.h  MLP.h  Model.h  layer.h  library.h
NNlib/include/layer/: ActivationLayer.h  FCLayer.h  HTActivationLayer.h  Layer.h  SMActivationLayer.h  SigmoidActivationLayer.h
NNlib/include/lossfunction/: FullLoss.h  LossFunction.h  MSELossFunction.h  SVMLossFunction.h  SoftMaxLossFunction.h
NNlib/include/matrix/: MatrixD.h  MatrixType.h
NNlib/include/matrix/cuda/: cudacode.h
NNlib/include/regularization/: L2Regularization.h  NoRegularization.h  Regularization.h
NNlib/include/trainer/: DistributedTrainer.h  Trainer.h
NNlib/include/utils/: random.h
NNlib/src/: Layer.cpp  LossFunction.cpp  MLP.cpp  Model.cpp  layer.cpp  library.cpp
NNlib/src/layer/: ActivationLayer.cpp  FCLayer.cpp  HTActivationLayer.cpp  Layer.cpp  SMActivationLayer.cpp  SigmoidActivationLayer.cpp
NNlib/src/lossfunction/: FullLoss.cpp  LossFunction.cpp  MSELossFunction.cpp  SVMLossFunction.cpp  SoftMaxLossFunction.cpp
NNlib/src/matrix/: MatrixD.cpp
NNlib/src/matrix/cuda/: cudacode.cpp
NNlib/src/regularization/: L2Regularization.cpp  NoRegularization.cpp  Regularization.cpp
NNlib/src/trainer/: DistributedTrainer.cpp  Trainer.cpp
NNlib/src/utils/: random.cpp
examples/: AutoInsurSwedenFitting.cpp  NOR.cpp  XOR.cpp  linearClassifierMNIST.cpp  main.cpp  matrixMPIMult.cpp  matrixMult.cpp  primitiveMatrixMult.cpp  primitiveParallelMatrixMult.cpp  projectPresentationExample.cpp  pseudocode  stopwatch.h
scripts/: benchmark_plot.py  loss_plotter.py  main.py  matrix_mult.py
tests/: main.cpp  test.cpp
